What is happening right now

--- a/ASpiritualJourney/pom.xml
+++ b/ASpiritualJourney/pom.xml
@@ -34,5 +34,10 @@
   		<artifactId>lucene-demo</artifactId>
   		<version>5.1.0</version>
   	</dependency>
+  	<dependency>
+  		<groupId>com.google.inject</groupId>
+  		<artifactId>guice</artifactId>
+  		<version>4.0</version>
+  	</dependency>
   </dependencies>
 </project>
